@@ -21,6 +21,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 === Configuration changes in 1.17 ===
 * DatabaseFunctions.php that was needed for compatibility with pre-1.3
   extensions has been removed.
+* $wgLogAutocreatedAccounts controls whether autocreation of accounts is logged
+  to new users log.
 
 === New features in 1.17 ===
 * (bug 10183) Users can now add personal styles and scripts to all skins via
